fix: spacing flex issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+*, *::before, *::after { margin: 0; box-sizing: border-box; }
+
 html, body, #root {
   width: 100%;
   height: 100%;
@@ -6,6 +8,8 @@ html, body, #root {
   justify-content: center;
   place-items: center;
   text-align: center;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 body {
